[metadata]
name = TikTok-Business-API
version = 1.2
author = Sharashchandra Desai
author_email = sharashchandra.desai@gmail.com
description = Minimal api wrapper for the TikTok Business API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sharashchandra/TikTok-Business-API
project_urls =
    Bug Tracker = https://github.com/Sharashchandra/TikTok-Business-API/issues
keywords = tiktok, business, api, wrapper
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    requests

[options.packages.find]
exclude =
    examples*
    tests*
